--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -2,36 +2,31 @@
   <div class="row">
     <div class="col-md-4">
       <div class="form-group">
-        <label for="name">Nombre</label>
-        <input type="text" class="form-control" id="name" placeholder="Nombre" [(ngModel)]="user.name" name="name" required>
+        <input type="text" class="form-control" id="name" placeholder="First Name" [(ngModel)]="user.name" name="name" required>
       </div>
     </div>
     <div class="col-md-4">
       <div class="form-group">
-        <label for="lastname">Apellido</label>
-        <input type="text" class="form-control" id="lastname" placeholder="Apellido" [(ngModel)]="user.lastname" name="lastname" required>
+        <input type="text" class="form-control" id="lastname" placeholder="Last Name" [(ngModel)]="user.lastname" name="lastname" required>
       </div>
     </div>
     <div class="col-md-4">
       <div class="form-group">
-        <label for="username">Nombre de Usuario</label>
-        <input type="text" class="form-control" id="username" placeholder="Nombre de Usuario" [(ngModel)]="user.username" name="username" required>
+        <input type="text" class="form-control" id="username" placeholder="Username" [(ngModel)]="user.username" name="username" required>
       </div>
     </div>
   </div>
 
-  <!-- Otros campos del formulario -->
+  <!-- Other form fields -->
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
-        <label for="email">Correo Electrónico</label>
-        <input type="email" class="form-control" id="email" placeholder="Correo Electrónico" [(ngModel)]="user.email" name="email" required>
+        <input type="email" class="form-control" id="email" placeholder="Email" [(ngModel)]="user.email" name="email" required>
       </div>
     </div>
     <div class="col-md-6">
       <div class="form-group">
-        <label for="password">Contraseña</label>
-        <input type="password" class="form-control" id="password" placeholder="Contraseña" [(ngModel)]="user.password" name="password" required>
+        <input type="password" class="form-control" id="password" placeholder="Password" [(ngModel)]="user.password" name="password" required>
       </div>
     </div>
   </div>
@@ -39,20 +34,17 @@
   <div class="row">
     <div class="col-md-4">
       <div class="form-group">
-        <label for="country">País</label>
-        <input type="text" class="form-control" id="country" placeholder="País" [(ngModel)]="user.country" name="country" required>
+        <input type="text" class="form-control" id="country" placeholder="Country" [(ngModel)]="user.country" name="country" required>
       </div>
     </div>
     <div class="col-md-4">
       <div class="form-group">
-        <label for="province">Provincia</label>
-        <input type="text" class="form-control" id="province" placeholder="Provincia" [(ngModel)]="user.province" name="province" required>
+        <input type="text" class="form-control" id="province" placeholder="Province" [(ngModel)]="user.province" name="province" required>
       </div>
     </div>
     <div class="col-md-4">
       <div class="form-group">
-        <label for="phone">Teléfono</label>
-        <input type="text" class="form-control" id="phone" placeholder="Teléfono" [(ngModel)]="user.phone" name="phone" required>
+        <input type="text" class="form-control" id="phone" placeholder="Phone" [(ngModel)]="user.phone" name="phone" required>
       </div>
     </div>
   </div>
@@ -60,17 +52,18 @@
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
-        <label for="accountNumber">Número de Cuenta</label>
-        <input type="text" class="form-control" id="accountNumber" placeholder="Número de Cuenta" [(ngModel)]="user.accountNumber" name="accountNumber" required>
+        <input type="text" class="form-control" id="accountNumber" placeholder="Account Number" [(ngModel)]="user.accountNumber" name="accountNumber" required>
       </div>
     </div>
     <div class="col-md-6">
       <div class="form-group">
-        <label for="accountTypeId">ID Tipo de Cuenta</label>
-        <input type="text" class="form-control" id="accountTypeId" placeholder="ID Tipo de Cuenta" [(ngModel)]="user.accountTypeId" name="accountTypeId" readonly>
+        <select class="form-control" id="accountTypeId" [(ngModel)]="user.accountTypeId" name="accountTypeId" required>
+          <option selected>Select an Account Type</option>
+          <option *ngFor="let type of accountTypes" [value]="type.id">{{ type.name }}</option>
+        </select>
       </div>
     </div>
   </div>
 
-  <button type="submit" class="btn btn-primary mt-3">Registrar</button>
+  <button type="submit" class="btn btn-primary mt-3">Register</button>
 </form>
