--- a/src/app/components/admin-wallet/admin-wallet.component.html
+++ b/src/app/components/admin-wallet/admin-wallet.component.html
@@ -1,39 +1,44 @@
 <div *ngIf="wallet">
-    <h2>Billetera {{ wallet.id }}</h2>
-    <div *ngFor="let coin of wallet.coins" class="card mb-3">
-      <div class="card-body">
-        <h5 class="card-title">{{ coin.name }}</h5>
-        <form>
-          <div class="form-group">
-            <label for="hedgeFundInvestment">Hedge Fund Investment</label>
-            <input type="text" class="form-control" id="hedgeFundInvestment" [(ngModel)]="coin.hedgeFundInvestment" name="hedgeFundInvestment" />
+    <h2 class="text-light">Billetera {{ wallet.id }}</h2>
+    <div class="row px-4">
+      <div *ngFor="let coin of wallet.coins" class="col-md-3 mb-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">{{ coin.name }}</h5>
+            <form>
+              <div class="form-group">
+                <label for="hedgeFundInvestment">Hedge Fund Investment</label>
+                <input type="text" class="form-control" [(ngModel)]="coin.hedgeFundInvestment" name="hedgeFundInvestment" />
+              </div>
+              <div class="form-group">
+                <label for="bonificat">Bonificat</label>
+                <input type="text" class="form-control" [(ngModel)]="coin.bonificat" name="bonificat" />
+              </div>
+              <div class="form-group">
+                <label for="hedgeProtectionInsurance">Hedge Protection Insurance</label>
+                <input type="text" class="form-control" [(ngModel)]="coin.hedgeProtectionInsurance" name="hedgeProtectionInsurance" />
+              </div>
+              <div class="form-group">
+                <label for="optQuantity">Opt Quantity</label>
+                <input type="text" class="form-control" [(ngModel)]="coin.optQuantity" name="optQuantity" />
+              </div>
+              <div class="form-group">
+                <label for="strikePrice">Strike Price</label>
+                <input type="text" class="form-control" [(ngModel)]="coin.strikePrice" name="strikePrice" />
+              </div>
+              <div class="form-group">
+                <label for="expirationDate">Expiration Date</label>
+                <input type="date" class="form-control" [(ngModel)]="coin.expirationDate" name="expirationDate" />
+              </div>
+              <div class="form-group">
+                <label for="earnings">Earnings</label>
+                <input type="text" class="form-control" [(ngModel)]="coin.earnings" name="earnings" />
+              </div>
+            </form>
           </div>
-          <div class="form-group">
-            <label for="bonificat">Bonificat</label>
-            <input type="text" class="form-control" id="bonificat" [(ngModel)]="coin.bonificat" name="bonificat" />
-          </div>
-          <div class="form-group">
-            <label for="hedgeProtectionInsurance">Hedge Protection Insurance</label>
-            <input type="text" class="form-control" id="hedgeProtectionInsurance" [(ngModel)]="coin.hedgeProtectionInsurance" name="hedgeProtectionInsurance" />
-          </div>
-          <div class="form-group">
-            <label for="optQuantity">Opt Quantity</label>
-            <input type="text" class="form-control" id="optQuantity" [(ngModel)]="coin.optQuantity" name="optQuantity" />
-          </div>
-          <div class="form-group">
-            <label for="strikePrice">Strike Price</label>
-            <input type="text" class="form-control" id="strikePrice" [(ngModel)]="coin.strikePrice" name="strikePrice" />
-          </div>
-          <div class="form-group">
-            <label for="expirationDate">Expiration Date</label>
-            <input type="date" class="form-control" id="expirationDate" [(ngModel)]="coin.expirationDate" name="expirationDate" />
-          </div>
-          <div class="form-group">
-            <label for="earnings">Earnings</label>
-            <input type="text" class="form-control" id="earnings" [(ngModel)]="coin.earnings" name="earnings" />
-          </div>
-        </form>
+        </div>
       </div>
     </div>
+    <button class="btn btn-dark mx-auto" (click)="updateWallet()">Update Wallet</button>
   </div>
   
